[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["doby09 <mihaid2009@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
plotly = "^5.9.0"
pandas = "^1.4.3"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
